# discord-bot-py

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  DB.md  README.md  bot.py  coin.py  color.py  config.py  conversion.py  currency.py  daily_checklist.py  dice.py  eight_ball.py  encode.py  errors.py  fortune.py  hangman.py  log.py  log_interaction.py  models.py  playground.py  pyproject.toml  reminder.py  requirements.txt  responses.py  rps.py  run.py  text_transform.py  time_funcs.py  todo.py  utils.py
.github/workflows/: ci.yml
bot/: __init__.py  bot.py
db/: __init__.py  bot.db  bot_orm.db  db.py
migrations/: 001_add_channel_id_and_is_private_to_reminder.py  001_initial_schema.py  002_add_todo_table.py  003_migrate_todo_private_guild_id.py  004_normalize_scope_worldclock_reminder.py  005_add_live_message_table.py  006_make_live_message_expires_at_nullable.py
scripts/: __init__.py  migrate_todo.py  migrate_world_clock.py
shared/: __init__.py  coin.py  color.py  config.py  conversion.py  currency.py  daily_checklist.py  dice.py  eight_ball.py  errors.py  fortune.py  hangman.py  live_messages.py  log.py  models.py  reminder.py  responses.py  rps.py  text_transform.py  time_funcs.py  timezone.py  todo.py
shared/db/: __init__.py  db.py
tests/: conftest.py  db_test_utils.py  test_coin.py  test_color.py  test_conversion.py  test_currency.py  test_daily_checklist.py  test_dice.py  test_eight_ball.py  test_encode.py  test_hangman.py  test_rps.py  test_text_transform.py  test_time_funcs.py
tests/shared/: test_coin.py  test_color.py  (+14 more)
(+17 files in other folders)
